fixed appearing horizontal scrollBar

--- a/src/sass/layout/contentPage.scss
+++ b/src/sass/layout/contentPage.scss
@@ -163,7 +163,7 @@
         }
         .code-explain {
           padding: 0rem 5rem 1rem 5rem;
-          margin-left: 5rem;
+          margin-left: 4rem;
           margin-top: 6rem;
           text-transform: capitalize;
           line-height: 6rem;
